etc/tests/Invalid/Syntax/InstanceDuplicate.tl
Location location1
    type = "pallet"
    name = "loc1"
End

Location location1 # error: same name as instance above
    type = "pallet"
    name = "loc2"
End